# api-performance-multi-lang

./: .gitignore  DSQL_CONNECT_AND_TEST.md  DSQL_EC2_SETUP_GUIDE.md  DSQL_MANUAL_SETUP.md  DSQL_QUICK_START.md  JENKINS_SETUP.md  Jenkinsfile  Jenkinsfile.groovy  METRICS_DATABASE_ANALYSIS.md  README.md  docker-compose.yml
.cursor/: testing-quality.mdc
cdc-streaming/: ADVANCED_USE_CASES.md  ARCHITECTURE.md  AWS_MSK_FLINK_SETUP_GUIDE.md  BACKEND_IMPLEMENTATION.md  CHANGES_PRODUCER_API.md  CODE_GENERATION.md  CONFLUENT_CLOUD_SETUP_GUIDE.md  DATA_FLOW_TO_POSTGRES.md  DEPLOY_DSQL_CONNECTOR.md  DISASTER_RECOVERY.md  E2E_TEST_PIPELINE_GUIDE.md  EC2_DEPLOYMENT_GUIDE.md  JENKINS_LOCAL_DEMO.md  LOCAL_SETUP.md  NEXT_STEPS_SUMMARY.md  PERFORMANCE_TUNING.md  PIPELINE_VALIDATION.md  README.md  SIMPLE_EVENTS_PIPELINE_VALIDATION.md  SPRING_BOOT_STREAM_PROCESSOR_GUIDE.md  TEST_EXECUTION_GUIDE.md  TEST_LOCAL_PIPELINE_REPORT.md  TEST_VALIDATION_REPORT.md  V2_FIX_SUMMARY.md  V2_TEST_FAILURE_ANALYSIS.md  confluent-flink-cdc-problems.md  confluent-setup.md  docker-compose-local.yml  docker-compose.confluent-cloud.yml  docker-compose.integration-test.yml  docker-compose.msk.yml  docker-compose.yml  fix-flink.md  spring-boot-alternative-architecture.md
data/: README.md  car.entity-large.json  car.entity-medium.json  schema.sql  (+19 more)
producer-api-python-rest-lambda-shared/: README.md  pyproject.toml
producer-api-python-rest-lambda-shared/producer_api_python_rest_lambda_shared/: __init__.py  constants.py
producer-api-python-rest-lambda-shared/producer_api_python_rest_lambda_shared/models/: __init__.py  event.py
producer-api-python-rest-lambda-shared/producer_api_python_rest_lambda_shared/repository/: __init__.py  base.py  business_event_repo.py
producer-api-python-rest-lambda-shared/producer_api_python_rest_lambda_shared/service/: event_processing.py
producer-api-python-rest-lambda-shared/tests/: __init__.py  conftest.py
producer-api-python-rest-lambda-shared/tests/unit/: test_models.py  test_repositories.py  test_service.py
producer-api-rust-grpc/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
producer-api-rust-grpc/proto/: event_service.proto
producer-api-rust-grpc/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs
producer-api-rust-grpc/src/models/: event.rs  mod.rs
producer-api-rust-grpc/src/repository/: business_event_repo.rs  car_entity_repo.rs  event_header_repo.rs  mod.rs
producer-api-rust-grpc/src/service/: event_processing.rs  event_processing_test.rs  event_service.rs  mod.rs
producer-api-rust-grpc/tests/: integration_test.rs  logging_integration_test.rs
producer-api-rust-rest/: Cargo.toml  Dockerfile  README.md
producer-api-rust-rest/migrations/: 001_initial_schema.sql
producer-api-rust-rest/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs
producer-api-rust-rest/src/handlers/: event.rs  health.rs  mod.rs
producer-api-rust-rest/src/models/: entity.rs  event.rs  mod.rs
producer-api-rust-rest/src/repository/: car_entity_repo.rs  entity_repo.rs  errors.rs  event_header_repo.rs  mod.rs
producer-api-rust-rest/src/service/: event_processing.rs  event_processing_test.rs  mod.rs
producer-api-rust-rest/tests/: integration_test.rs  logging_integration_test.rs
(+1252 files in other folders)
