[package]
name = "producer-api-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate"] }
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
mockall = "0.13"
testcontainers = "0.15"
testcontainers-modules = { version = "0.1.0-beta.1", features = ["postgres"] }
tracing-test = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
